- Upgrade quarkus - Add libs.versions.toml - Update dependabot configuration - Cleanup deprecated methods